# hpc_lab

./: .gitignore  Pipfile  flake.nix
01/: slurm_job_one.sh  slurm_job_two.sh
01/hello_world/: slurm_job_one.sh  slurm_job_two.sh
01/memory_hierarchies/: cache_one.sh  cache_two.sh  (+2 more)
project03/mini_app/: CMakeLists.txt  Makefile  avg_times.csv  fisher_seq.out  fisher_strong-scaling.out  fisher_weak-scaling.out  linalg.cpp  main.cpp  operators.cpp  run_seq.sh  strong_scaling.py  strong_scaling.sh  weak_scaling.py  weak_scaling.sh  weak_scaling1.py
project03/mini_app/.cache/clangd/index/: data.cpp.96E82B50A8903FEC.idx  data.h.8FE309D695FBEB23.idx  linalg.cpp.655FECBF585752E9.idx  linalg.h.62343F2BABF127FC.idx  main.cpp.276443069DDA39D5.idx  operators.cpp.D52E7D2C7A0210B6.idx  operators.h.F352E08770333B43.idx  stats.cpp.63A5F1D4B84D19B2.idx  stats.h.987823FB9378A56B.idx  walltime.cpp.DD374318F14FF46A.idx  walltime.h.25CC025FFA3C2402.idx
project1_part_b/: Makefile  benchmark-blas  benchmark-blocked  benchmark-naive  dgemm-blocked.c  dgemm-naive.c  matrixmult-50517025.err  matrixmult-50517025.out  matrixmult-50519553.out  matrixmult-50519998.out  matrixmult-50520149.out  matrixmult-50558520.out  matrixmult-50561740.err  matrixmult-50561740.out  matrixmult-50562453.out  matrixmult-50562631.out  matrixmult-50563359.out  matrixmult-50826363.err  matrixmult-50826363.out  matrixmult-50826657.err  matrixmult-50826657.out  matrixmult-50826841.err  matrixmult-50826841.out  matrixmult-50827284.out  matrixmult-50840611.out  matrixmult-50841933.out  matrixmult-50843121.err  matrixmult-50843121.out  matrixmult-50873063.out  matrixmult-50873361.out  run_matrixmult.sh  timing_basic_dgemm.data  timing_blas_dgemm.data  timing_blocked_dgemm.data
(+158 files in other folders)
